--- a/style.css
+++ b/style.css
@@ -370,7 +370,7 @@ nav .fa{
     text-decoration: none;
     font-size: 20px;
     position: relative;
-}
+    }}
 
  /* ================================CSS FOR SMALL SCREEN============================= */
  @media only screen and (max-width: 700px) {
